[gd_scene load_steps=3 format=3 uid="uid://1malajsj05pg"]

[ext_resource type="Theme" uid="uid://bqt13gd00jakt" path="res://Themes/Theme.tres" id="1_rvycu"]
[ext_resource type="Script" path="res://Code/SceneCode/Screens/optionsMenu.gd" id="2_vrnb5"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_rvycu")
script = ExtResource("2_vrnb5")
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -353.0
offset_right = 555.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1100, 700)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Title"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]OPTIONS"
scroll_active = false

[node name="Audio" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10

[node name="IndvOptions" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/Title"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]AUDIO MIXING"

[node name="AudioOptions" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions"]
layout_mode = 2
theme_override_constants/margin_left = 50

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions"]
layout_mode = 2
columns = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Master Volume"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer/PanelContainer"]
layout_mode = 2
value = 100.0

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="RichTextLabel3" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Music
Volume"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer/PanelContainer2"]
layout_mode = 2
value = 100.0

[node name="RichTextLabel4" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="RichTextLabel5" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "SFX
Volume"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer/PanelContainer3"]
layout_mode = 2
value = 100.0

[node name="RichTextLabel6" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Audio/IndvOptions/AudioOptions/GridContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "		100%"

[node name="Controls" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Controls"]
layout_mode = 2

[node name="Title" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer/Title"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
bbcode_enabled = true
text = "[center]CONTROL REMAPPING"

[node name="GridContainer" type="GridContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="A Remap" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/Controls/VBoxContainer/GridContainer/A Remap"]
custom_minimum_size = Vector2(75, 25)
layout_mode = 2
text = "A Button"
scroll_active = false

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_stretch_ratio = 0.0
text = "Exit
"
